--- a/03_api.ipynb
+++ b/03_api.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,10 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "client_id = 'ma3vHyqV801aRCqsSu0h'\n",
+    "client_pw = 'gqmHDEmnkp'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,10 +59,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://openapi.naver.com/v1/papago/n2mt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {'Content-Type':'application/json',\n",
+    "           'X-Naver_Client_Id':client_id,\n",
+    "           'X-Naver_Client_Secret':client_pw,\n",
+    "           }\n",
+    "\n",
+    "ko_text = '웹크롤링은 재미있고 돈이 됩니다.'\n",
+    "params = {'source':'ko', 'target':'en', 'text': ko_text}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"source\": \"ko\", \"target\": \"en\", \"text\": \"\\\\uc6f9\\\\ud06c\\\\ub864\\\\ub9c1\\\\uc740 \\\\uc7ac\\\\ubbf8\\\\uc788\\\\uace0 \\\\ub3c8\\\\uc774 \\\\ub429\\\\ub2c8\\\\ub2e4.\"}'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.dumps(params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"errorMessage\":\"Not Exist Client ID : Authentication failed. (인증에 실패했습니다.)\",\"errorCode\":\"024\"}'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = requests.post(url, json.dumps(params), headers=headers)\n",
+    "response.text"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "en_text = response.json()['message']['result']['translatedText']"
+   ]
   },
   {
    "cell_type": "markdown",
