--- a/07_naver_relational_keywords.ipynb
+++ b/07_naver_relational_keywords.ipynb
@@ -32,11 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c1581d54",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "query = '삼성전자'\n",
+    "url = f'https://search.naver.com/search.naver?query={query}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,11 +51,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ceda1c7b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = requests.get(url)\n",
+    "response"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,11 +81,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8736bc68",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bs4.BeautifulSoup"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dom = BeautifulSoup(response.text, 'html.parser')\n",
+    "type(dom)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,11 +111,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "525c3274",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selector = '#nx_right_related_keywords > div > div.related_srch > ul > li'\n",
+    "elements = dom.select(selector)\n",
+    "len(elements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "05192e20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['삼성전자주가',\n",
+       " '삼성전자 배당금',\n",
+       " '삼성전자주식',\n",
+       " '삼성전자서비스',\n",
+       " '오늘 삼성전자 주가',\n",
+       " '삼성전자 채용',\n",
+       " '삼성전자 배당금 지급일',\n",
+       " '삼성 전자레인지',\n",
+       " '삼성전자몰',\n",
+       " '삼성전자 주가 전망']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keywords = [element.select_one('.tit').text for element in elements]  \n",
+    "keywords"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,11 +173,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "62e1ef05",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>keyword</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>삼성전자주가</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>삼성전자 배당금</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>삼성전자주식</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>삼성전자서비스</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>오늘 삼성전자 주가</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>삼성전자 채용</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>삼성전자 배당금 지급일</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>삼성 전자레인지</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>삼성전자몰</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>삼성전자 주가 전망</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        keyword\n",
+       "0        삼성전자주가\n",
+       "1      삼성전자 배당금\n",
+       "2        삼성전자주식\n",
+       "3       삼성전자서비스\n",
+       "4    오늘 삼성전자 주가\n",
+       "5       삼성전자 채용\n",
+       "6  삼성전자 배당금 지급일\n",
+       "7      삼성 전자레인지\n",
+       "8         삼성전자몰\n",
+       "9    삼성전자 주가 전망"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame({'keyword':keywords})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e88c10d",
+   "metadata": {},
+   "source": [
+    "## To Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "be43e641",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def rkeyword(query):\n",
+    "    \n",
+    "    url = f'https://search.naver.com/search.naver?query={query}'\n",
+    "    response = requests.get(url)\n",
+    "    dom = BeautifulSoup(response.text, 'html.parser')\n",
+    "    selector = '#nx_right_related_keywords > div > div.related_srch > ul > li'\n",
+    "    elements = dom.select(selector)\n",
+    "    keywords = [element.select_one('.tit').text for element in elements]  \n",
+    "    \n",
+    "    return keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9b9ceaa2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['깃허브',\n",
+       " 'git',\n",
+       " 'github 사용법',\n",
+       " 'github 캠성',\n",
+       " 'GitHub - shmykelsa / AAAD',\n",
+       " 'github desktop',\n",
+       " 'github.com']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rkeyword('github')"
+   ]
   }
  ],
  "metadata": {
